--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -287,7 +287,7 @@ Image
 
 
 
-
+\newpage 
 \begin{table}[h!]
   \centering
   \begin{tabular}{p{0.3\textwidth} p{0.6\textwidth}}
@@ -297,7 +297,15 @@ Image
   
   \textbf{Hardware-Hiding Module} & ~ \\
   \midrule
-  
+\end{tabular}
+\caption{Module Hierarchy}
+\label{TblMH}
+\end{table}
+\begin{table}[h!]
+  \centering
+  \begin{tabular}{p{0.3\textwidth} p{0.6\textwidth}}
+  \toprule
+  \textbf{Level 1} & \textbf{Level 2}\\
   \multirow{10}{0.3\textwidth}{\textbf{Behaviour-Hiding Module}} 
    & Account Creation Interface\\
    & Account Database\\
@@ -334,7 +342,15 @@ Image
    & ModelManager\\
    & MLModelDatabase\\
   \midrule
-  
+\end{tabular}
+\caption{Module Hierarchy}
+\label{TblMH}
+\end{table}
+\begin{table}[h!]
+  \centering
+  \begin{tabular}{p{0.3\textwidth} p{0.6\textwidth}}
+  \toprule
+  \textbf{Level 1} & \textbf{Level 2}\\
   \multirow{10}{0.3\textwidth}{\textbf{Software Decision Module}} 
    & Account Creation Controller\\
    & Account Database Connector\\
@@ -363,6 +379,9 @@ Image
   \end{table}
   
 
+\newpage 
+.
+\newpage 
 
 \section{Connection Between Requirements and Design} \label{SecConnection}
 
@@ -1055,14 +1074,14 @@ the modules. It can be seen that the graph is a directed acyclic graph
 system, and modules in the higher level of the hierarchy are essentially simpler
 because they use modules from the lower levels.
 
-\wss{The uses relation is not a data flow diagram.  In the code there will often
-be an import statement in module A when it directly uses module B.  Module B
-provides the services that module A needs.  The code for module A needs to be
-able to see these services (hence the import statement).  Since the uses
-relation is transitive, there is a use relation without an import, but the
-arrows in the diagram typically correspond to the presence of import statement.}
+% \wss{The uses relation is not a data flow diagram.  In the code there will often
+% be an import statement in module A when it directly uses module B.  Module B
+% provides the services that module A needs.  The code for module A needs to be
+% able to see these services (hence the import statement).  Since the uses
+% relation is transitive, there is a use relation without an import, but the
+% arrows in the diagram typically correspond to the presence of import statement.}
 
-\wss{If module A uses module B, the arrow is directed from A to B.}
+% \wss{If module A uses module B, the arrow is directed from A to B.}
 
 \subsection*{Level 1: Foundational Modules}
 
